--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,23 +5,21 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "Publications"
+  - title: "Home"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Research"
+    url: /publications/
+  
+  - title: "Publications"
+    url: /publications/  
 
   - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
+    url: /teaching/   
+
+  - title: "Service"
+    url: /teaching/ 
+      
   - title: "CV"
     url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
