--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
     url: /publications/
   
   - title: "Publications"
-    url: /publications/  
+    url: /papers/  
 
   - title: "Teaching"
     url: /teaching/   
