--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,7 @@ main:
     url: /papers/  
 
   - title: "Teaching"
-    url: /teaching/   
+    url: /teach/   
 
   - title: "Service"
     url: /service/ 
