--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Menglu Li"
 title_separator          : "-"
 name                     : &name "Menglu Li"
 description              : &description "personal description"
-url                      : https://menglu-lml.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://menglu-lml.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "menglu-lml/menglu-lml.github.io"
 
