--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ author:
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.com/citations?user=bh5r0XoAAAAJ&hl=en"
   impactstory      : # URL
-  orcid            : # URL
+  orcid            : "https://orcid.org/0000-0003-2441-6572"
   semantic         : # URL
   pubmed           : # URL
   researchgate     : # URL
